# Specter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
specter/: __init__.py
specter/api/: __init__.py  cli.py  sdk.py  server.py
specter/ml/: __init__.py  secure_inference.py
specter/security/: __init__.py  attestation.py  encryption.py  key_management.py
specter/tee/: __init__.py  base.py  sev.py  sgx.py
specter/utils/: __init__.py
tests/: test_specter.py
